# ce

./: Cargo.toml  README.md  index.html  readme.html
config/: config.json
src/: main.rs
src/ai/: mod.rs
src/ai/codeium/: auth.rs  certs.rs  engine.rs  mod.rs  server.rs  types.rs
src/ai/llama/: llm.rs
src/comp/: mod.rs  path_complete.rs  provider.rs  state.rs
src/config/: app_config.rs  mod.rs
src/ed/: buffer.rs  clipboard.rs  diff_align.rs  editing.rs  editor.rs  ext.rs  guide.rs  gutter.rs  handle_git.rs  handle_guide.rs  handle_key.rs  handle_mru.rs  health.rs  history.rs  implex.rs  misc_helper.rs  mod.rs  mode.rs  movement.rs  position.rs  repeat.rs  ripgrep.rs  syntax.rs  tag.rs  window.rs
src/ed/handle/: buffer_list.rs  fd.rs  file_picker.rs  filter.rs  function_list.rs  git.rs  git_hunk.rs  git_ops.rs  guide.rs  llm.rs  marks.rs  mod.rs  mru.rs  popup.rs  quit.rs  ripgrep.rs  subst.rs  tag.rs
src/git/: commit.rs  debounce.rs  engine.rs  gutter.rs  log.rs  mod.rs  revert.rs  status.rs
src/keybind/: actions.rs  binding_ex.rs  bindings.rs  block_ops.rs  brief_trackers.rs  config_keys.rs  defaults.rs  desc_override.rs  display.rs  mod.rs  palette_defaults.rs  safetynet.rs
src/popup/: buffer_list.rs  command_palette.rs  error.rs  fd.rs  file_picker.rs  filtered_list.rs  function_list.rs  fuzzy.rs  git_hunk.rs  guide.rs  marks.rs  mod.rs  mru.rs  tag_candidates.rs
src/render/: buffer_view.rs  command_line.rs  helpers.rs  mod.rs  popup.rs  rounded_box.rs  statusbar.rs  statusbar_state.rs  tabs.rs
src/repl/: command.rs  mod.rs
