[package]
name = "ce"
version = "0.3.0"
edition = "2021"
description = "Mini vim buffer editor with Codeium AI ghost-text completions and multi-buffer support"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
colored = "2"
crossterm = "0.29"
dirs = "5"
env_logger = "0.11"
flate2 = "1"
log = "0.4"
modalkit = "0.0.25"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
ropey = "1"
rustls = "0.21"
rustls-native-certs = "0.7"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shellexpand = "3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
webpki-roots = "0.26"
git2 = "0.20.4"
arboard = "3.4"
toml = "0.8"
fuzzy-matcher = "0.3"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

unicode-segmentation = "1.12"
unicode-width = "0.2"
ignore = "0.4"

tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-diff = "0.1.0"

[lints.rust]
unused_variables = "allow"
# unused_imports = "allow"
dead_code = "allow"
unused_macros = "allow"
unused_assignments = "allow"
# unreachable_patterns = "allow"
unexpected_cfgs = "allow"

